cambio repositorio url

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,7 +4,7 @@ site_description: Master in Design for Emergent Futures
 site_author: Leonardo Eguia
 copyright: Copyleft 2024 "Leonardo Eguia" - GNU Free Documentation License
 repo_name: 'Leonardo Eguia : Github Repo'
-site_url: https://fablabbcn.github.io/efdi-template/
+site_url: https://github.com/LE0NIDAS1/leonardo_eguia
 repo_url: https://github.com/fablabbcn/efdi-template
 
 
