--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,16 +25,12 @@ nav:
 extra:
   social:
     # For other social icons at https://squidfunk.github.io/mkdocs-material/setup/adding-social-links/
-    - icon: fontawesome/brands/medium
-      link: https://medium.com/
     - icon: fontawesome/brands/instagram
-      link: https://instagram.com/
-    - icon: fontawesome/brands/twitter
-      link: https://twitter.com/
+      link: https://www.instagram.com/leoeguia21?utm_source=qr&igsh=YWU5OWw5Y3FuNmw1
     - icon: fontawesome/brands/linkedin
-      link: "https://www.linkedin.com/in/"
+      link: "linkedin.com/in/leonardo-roy-eguia-sosa-0b1b2514b"
     - icon: fontawesome/brands/github
-      link: "https://github.com/"
+      link: "https://github.com/LE0NIDAS1"
 
 theme:
   name: material
