--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,7 +28,7 @@ extra:
     - icon: fontawesome/brands/instagram
       link: https://www.instagram.com/leoeguia21?utm_source=qr&igsh=YWU5OWw5Y3FuNmw1
     - icon: fontawesome/brands/linkedin
-      link: "linkedin.com/in/leonardo-roy-eguia-sosa-0b1b2514b"
+      link: "https://www.linkedin.com/in/leonardo-roy-eguia-sosa-0b1b2514b/"
     - icon: fontawesome/brands/github
       link: "https://github.com/LE0NIDAS1"
 
