--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,6 +24,7 @@ nav:
     - MI01: innovacion/mi01.md
   - Modulos Fabricacion :
     - FP01: fabricacion/fp01.md
+    - FP02: fabricacion/fp02.md
   - Proyecto Integrador:
     - Ideas Iniciales: proyecto/proyecto.md
 
