--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,6 +24,7 @@ nav:
     - MD03: diseno/md03.md
   - Modulos Innovación :
     - MI01: innovacion/mi01.md
+    - MI02: innovacion/mi02.md
   - Modulos Fabricacion :
     - FP01: fabricacion/fp01.md
     - FP02: fabricacion/fp02.md
