--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,6 +33,8 @@ nav:
     - FP02: fabricacion/fp02.md
   - Proyecto Integrador:
     - Ideas Iniciales: proyecto/proyecto.md
+    - Proyecto final: proyecto/proyectofinal.md
+
 
 
 extra:
