--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,7 +32,7 @@ nav:
     - FP01: fabricacion/fp01.md
     - FP02: fabricacion/fp02.md
   - Proyecto Integrador:
-    - Ideas Iniciales: proyecto/proyecto.md
+    - Ideas Iniciales y evidencias: proyecto/proyecto.md
     - Diseño y Desarrollo: proyecto/desarrollo.md
     - Proyecto final: proyecto/proyectofinal.md
 
