--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,6 +35,7 @@ nav:
     - Ideas Iniciales y evidencias: proyecto/proyecto.md
     - Diseño y Desarrollo: proyecto/desarrollo.md
     - Proyecto final: proyecto/proyectofinal.md
+    - Presentación y Video: proyecto/presentacion.md
 
 
 
